[build-system]
requires = ["scikit_build_core", "pybind11"]
build-backend = "scikit_build_core.build"

[project]
name = "neo_dsp"
version = "0.1.0"
description = "Audio DSP library"
readme = "README.md"
authors = [{ name = "Tobias Hienzsch", email = "post@tobias-hienzsch.de" }]
requires-python = ">=3.7"
dependencies = ["numpy"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
Homepage = "https://github.com/neo-sonar/plugin-perceptual-convolution"
Issues = "https://github.com/neo-sonar/plugin-perceptual-convolution/issues"

[project.optional-dependencies]
test = ["pytest"]

[tool.scikit-build]
cmake.source-dir = "src/python"
wheel.packages = ["src/python/neo_dsp"]
wheel.expand-macos-universal-tags = true


[tool.pytest.ini_options]
minversion = "7.0"
addopts = ["-ra", "--strict-markers", "--strict-config"]
xfail_strict = true
filterwarnings = ["error"]
testpaths = ["src/python/test/*"]
